--- a/sass/style.scss
+++ b/sass/style.scss
@@ -513,7 +513,7 @@ header {
 
 
 
- .menu {
+.menu {
       @include flex;
       @include background-color($grisclair_sup);
 
@@ -558,6 +558,12 @@ header {
                                           .description {
                                                 display: flex;
                                                 @include margin(-1.5rem, 0, 0, 1rem);
+                                                      & p {
+                                                      width: 100%;
+                                                      white-space: nowrap;
+                                                      overflow: hidden;      
+                                                      text-overflow: ellipsis;
+                                                      }
                                           }
 
                                           .prix {
@@ -583,6 +589,7 @@ header {
                                                 font-size: 2rem;
                                                 right: 0rem;
                                                 color: $white;
+                                                
                                           }
                                     }
                               }
@@ -609,7 +616,7 @@ header {
                                           }
                                     }     
                               }
-                              &:active {
+                              /*&:active {
                                     @extend %box_shadow_léger;
                                     cursor: pointer;
                                     .description_prix_check {
@@ -625,7 +632,7 @@ header {
                                                 }
                                                 .prix {
                                                       transition: 0.75s;
-                                                      margin-right: 3.5rem;
+                                                      margin-right: 3.3rem;    
                                                 }
                                           }
                                           .check {
@@ -640,9 +647,9 @@ header {
                                                 }
                                           }
                                     }
-                              }   
+                              } */
                         }
-                        &:active {
+                        /*&:active {
                               & .plat {
                                     & p { 
                                     width: 65%;
@@ -651,7 +658,7 @@ header {
                                     text-overflow: ellipsis;
                                     } 
                               }                   
-                        } 
+                        }*/ 
             }
 } 
 
@@ -665,22 +672,102 @@ header {
                                     .description {
                                           width: 100%;
                                           font-size: 0.85rem;
-                                         /* text-overflow: ellipsis;
+                                          text-overflow: ellipsis;
                                           white-space: nowrap;
-                                          overflow: hidden;  */ 
+                                          overflow: hidden;
                                     }
                                     .prix {
                                           @include margin(0, -0.5rem, -1rem, 0);
-                                          &:active {
-                                                margin-right: 3.2rem;
-                                          }
                                     }
                               }
                               .check {
                                     @include padding(1.4rem, 1rem, 1rem, 1rem);
                               } 
+                        }
+                        &:hover {
+                              @extend %box_shadow_léger;
+                              cursor: pointer;
+                              .description_prix_check {
+                                    .description_prix {
+                                          .description {
+                                                & p {
+                                                width: 85%;
+                                                white-space: nowrap;
+                                                overflow: hidden;      
+                                                text-overflow: ellipsis;
+                                                }
+
+                                          }
+                                          .prix {
+                                                transition: 0.75s;
+                                                margin-right: 3.3rem;
+                                          }
+                                    }
+                                    .check {
+                                          width: 2rem;
+                                          background-color: $tertiaire;
+                                          @include border-r(0, 25px, 25px, 0);
+                                          
+                                          .fa-check-circle {
+                                                opacity: 1;
+                                                z-index: 3;
+                                                animation: checked 0.5s linear;
+                                          }
+                                    }
+                              }
+                        }
+                        &:active {
+                              box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 30%);
+                              cursor: pointer;
+                              .description_prix_check {
+                                    .description_prix {
+                                          .description {
+                                                & p {
+                                                width: 85%;
+                                                white-space: nowrap;
+                                                overflow: hidden;      
+                                                text-overflow: ellipsis;
+                                                }
+                                          }
+                                          .prix {
+                                                transition: 0.75s;
+                                                margin-right: 3.3rem;
+                                          }
+                                    }
+                                    .check {
+                                          width: 2rem;
+                                          background-color: $tertiaire;
+                                          @include border-r(0, 25px, 25px, 0);
+                                          
+                                          .fa-check-circle {
+                                                opacity: 1;
+                                                z-index: 3;
+                                                animation: checked 0.5s linear;
+                                          }
+                                    }
+                              }
                         }        
                   }
+                  &:hover {
+                        & .plat {
+                              & p { 
+                                    width: 65%;
+                                    white-space: nowrap;
+                                    overflow: hidden;      
+                                    text-overflow: ellipsis;
+                              } 
+                        }  
+                  }
+                  &:active {
+                        & .plat {
+                              & p { 
+                              width: 65%;
+                              white-space: nowrap;
+                              overflow: hidden;      
+                              text-overflow: ellipsis;
+                              } 
+                        }                   
+                  } 
             }     
       }
 }
